tests/snapshots/examples_fixtures/type_system__06_higher_order_typed.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/06_higher_order_typed.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/06_higher_order_typed.flx:16:1
   |
16 | print("doubled_sum=#{doubled_sum}")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/type_system/06_higher_order_typed.flx:16:1
   |
16 | print("doubled_sum=#{doubled_sum}")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/06_higher_order_typed.flx:17:1
   |
17 | print(apply_twice(/(x: Int) -> x + 3, 10))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 3 errors.
== stdout ==
<not executed>
